--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function today1()
  
  var shop='';
    var start= $("#start").val();
-   let endpoint = 'https://options-api.avisplus.io/api/v1/tracking-behavior?shop_domain='+start;
+   let endpoint = 'https://apo-api.avisplus.io/api/v1/tracking-behavior?shop_domain='+start;
  var str='';
 				
  let end="</div> </div> </div></div> </div></div>";
